	Fixed bug where td elements would get a colspan/rowspan of 1 when created by the table plugin.
	Fixed bug where removal/padding of empty elements wasn't handled correctly.
	Fixed bug where internal elements would show up in element path.
	Fixed bug where internal elements would get serialized as valid output.
	Fixed bug where color wasn't correctly applied to anchor elements.
	Moved some plugin css contents into the skin content css files to reduce the number of http requests.
	Moved some plugin specific images into the theme img directory since they can then be shared.
Version 3.4b2 (2011-01-13)
	Added new custom flash player, this player supports mp4 and flv and has skin support.
	Fixed so mceInsertContent handles context correctly to enforce valid nesting of elements.
	Fixed bug where scrolling would become jerky on IE on some contents.
	Fixed bug where paste as plain text would throw exception of missing entities setting.
	Fixed bug where anchor nodes where removed by the new serializer engine.
	Fixed bug where IE would crash if when backspace where used on some specific contents.
	Fixed bug where pasting of plain text in WebKit would result in merging of text lines.
	Fixed bug where it wasn't possible to delete images or tables using backspace on IE9.
	Fixed bug where urls in styles would generate a JS error due to incorrect scope.
	Fixed bug where copy paste from Java applications would produce extra contents in FF on Mac.
	Fixed bug where the verify_html option wouldn't allow all elements and attributes.
Version 3.4b1 (2010-12-20)
	Added new serialization engine that increases performance and enforces valid output according to the specified schema settings.
	Added new HTML parser logic used by the serialization engine and can handle malformed html contents.
	Added new valid_children config option, enables more fine grain control of elements can be inside other elements.