@@ -10,6 +10,7 @@ Version 3.4b3 (2011-01-xx)
 	Fixed bug where internal elements would show up in element path.
 	Fixed bug where internal elements would get serialized as valid output.
 	Fixed bug where color wasn't correctly applied to anchor elements.
+	Fixed bug where float option in the style plugin dialog wouldn't be handled correctly on WebKit.
 	Moved some plugin css contents into the skin content css files to reduce the number of http requests.
 	Moved some plugin specific images into the theme img directory since they can then be shared.
 Version 3.4b2 (2011-01-13)
